misc-SYS-33a22: Universe renames now logged. Redesgined admin Log records page (ex-error)

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,10 +8,10 @@
 [%] Исправление - багфикс
 [@] Эта информация будет интересна только админам и/или разработчикам
 
-Текущая версия 33a21
+Текущая версия 33a22
 ~~~~~~~~~~~~~~~~~~~~
 
-[!] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной полноценную
+[@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите PHP, сделайте откат  до  более  ранней
     версии PHP или используйте предыдущую версию СН.
     Описание бага: https://bugs.php.net/bug.php?id=50394
@@ -26,19 +26,20 @@
     2. Член Альянса может перевести ресурсы на счет Альянса. Сделать это  можно
        на главной странице Альянса в разделе "Ресурсы Альянса".  Там  же  можно
        увидеть состояние счета Альянса и бонусы, предоставляемые Альянсом  (см.
-       ниже)
+       ниже). Кроме того в топбар  добавлено  отображение  ресурсов  Альянса  и
+       индикация наличия/отсутствия бонусов участникам Альянса
     3. Ресурсы со счета Альянса могут расходоваться только  на  нужды  Альянса.
        Вывод ресурсов со счета Альянса невозможен
     4. Владелец   Альянса  с  его  счета   может   исследовать   технологии   и
        рекрутировать Наемников - соответственно пункты "Технологии  Альянса"  и
        "Наемники Альянса" на странице управления
-    5. После достижения минимально необходимого размера Альянса (по умолчанию -
-       10 человек, задается в  таблице  `config`  записью  'ali_members_bonus')
+    5. После достижения минимально необходимого размера Альянса (10 человек  по
+       умолчанию, задается  в  таблице  `config`  записью  'ali_members_bonus')
        каждый член Альянса получает бонус к своим Наемникам и технологиям
     6. Значение бонуса зависит от количества игроков в Альянсе и вычисляется по
        формуле: Бонус = round(уровень  технологии  или  Наемника  /  количество
        игроков),  где round() - операция математического округления.
-    8. Бонусы   от  Наемников  и  Технологий  так  же  действуют  при  проверки
+    7. Бонусы   от  Наемников  и  Технологий  так  же  действуют  при  проверки
        требований  к  постройкам/исследованиям.  Например:  игрок   состоит   в
        Альянсе, дающем бонус  +2  к  Лазерной  технологии,  а  его  собственный
        уровень технологии равен 4. Эффективный уровень технологии этого  игрока
@@ -46,14 +47,14 @@
        исследованию Ионной  технологии  (требуется  ЛТ  5-го  уровня)  и  может
        строить Тяжелый Лазер (требуется ЛТ 6-го уровня). Очевидно, если  бы  он
        не находился в Альянсе, эти постройки были бы заблокированы
-    9. При исследовании технологии уровень лаборатории равен количеству игроков
+    8. При исследовании технологии уровень лаборатории равен количеству игроков
        в Альянсе на момент начала  исследования.  Активные  исследования  видны
        членам Альянса на странице информации
     Примеры:
-      1. Альянс  из 10 человек купил Технологию 4 уровня. Бонус = round(4/10) =
+      1. Альянс из 10 человек купил Технологию 4 уровня. Бонус = round(4/10)  =
          round(0,4) = 0
-      2. Альянс  из 10 человек купил Технологию 7 уровня. Бонус = round(7/10) =
-         round(0,7) = 1 
+      2. Альянс из 10 человек купил Технологию 7 уровня. Бонус = round(7/10)  =
+         round(0,7) = 1
     Выбранная механика бонусов  Альянса  призван  обеспечить  достижение  сразу
     нескольких целей:
     1. Исключить злоупотребление фишкой,  когда  2-3  игрока  формируют  Альянс
@@ -193,7 +194,6 @@
 [+] Исследования: Добавлены подробные  сообщения  об  ошибке  в  случае,  когда
     технология не может быть исследована (нехватка ресурсов,  неудовлетворенные
     требования итд)
-[+] Альянсы: В топбар добавлено отображение ресурсов Альянса
 [+] Документация: Добавлен файл /docs/html/changelog.html - чейнджлог в html
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
@@ -224,6 +224,8 @@
     на основную планету игрока
 [~] Список планет: Клик на иконке  летящего  союзного  флота  теперь  открывает
     сраницу "Флоты в полете"
+[~] Вселенная:   Все  действия  по  переименованию  галактик  и  систем  теперь
+    записываются в лог - код события 104
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
@@ -267,6 +269,7 @@
     последней новости -  т.е.  отредактированная  новость  не  включает  список
     последних новостей на обзоре планеты
 [@] Файлы: Удалены неиспользуемые файлы faq.php, faq1.php, faq2.php
+[@] Админка: Редизайн интерфейса просмотра логов (бывш. "Ошибки")
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
