--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,8 +8,8 @@
 [%] Исправление - багфикс
 [@] Эта информация будет интересна только админам и/или разработчикам
 
-Текущая версия 33a22
-~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a22.2
+~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите PHP, сделайте откат  до  более  ранней
@@ -226,6 +226,9 @@
     сраницу "Флоты в полете"
 [~] Вселенная:   Все  действия  по  переименованию  галактик  и  систем  теперь
     записываются в лог - код события 104
+[~] Чёрный Рынок
+    Редизайн основного экрана и экрана обмена ресурсов
+    Откуда взялась эта странная надпись? Очень странно...
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
@@ -270,6 +273,7 @@
     последних новостей на обзоре планеты
 [@] Файлы: Удалены неиспользуемые файлы faq.php, faq1.php, faq2.php
 [@] Админка: Редизайн интерфейса просмотра логов (бывш. "Ошибки")
+[@] Чёрный Рынок: Почищены языковые файы от неиспользуемых строк
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
@@ -1184,7 +1188,7 @@ Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
     части ошибок
 [~] Настройки: При попытке уйти в отпуск теперь  выдается  отдельное  сообщение
     при летящих флотах и отдельное сообщение при постройке на планетах
-[~] Черный Рынок: Торговец ресурсами - Добавлена защита от повторного обмена
+[~] Чёрный Рынок: Торговец ресурсами - Добавлена защита от повторного обмена
 [~] Сообщения: В навбаре теперь дополнительно отображаются количество сообщений
     от других игроков  и  количество  сообщений  от  членов  альянса.  Цветовое
     кодирование зависит от скина и такое же, как на странице сообщений
@@ -1211,10 +1215,10 @@ Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
 [%] Настройки: Исправлена ошибка с невозможностью ухода в отпуск
 [%] Флоты:  Исправлены   ошибка  "Не  хватает  топлива"  при  отправки   миссий
     "Колонизация" и "Экспедиция"
-[%] Черный Рынок/Торговец ресурсами: закрыт  эксплойт,  позволяющий  обменивать
+[%] Чёрный Рынок/Торговец ресурсами: закрыт  эксплойт,  позволяющий  обменивать
     ресурсы на ТМ
-[%] Черный   Рынок:     Теперь   невозможно   продать/купить   не-корабль    на
-    соответствующей странице Черного Рынка
+[%] Чёрный   Рынок:     Теперь   невозможно   продать/купить   не-корабль    на
+    соответствующей странице Чёрного Рынка
 [%] Боевка: Корабли теперь не будут увозить отрицательные ресурсы с планеты
 [%] Экономика: Производительность теперь не может быть отрицательной
 [%] Экономика: Исправлена ошибка, когда при отрицательной добыче ресурсы  могли
@@ -1247,7 +1251,7 @@ Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
     хозяина: в цикл просмотра системы, в выгрузку  кэша  в  темплейт,  в  самом
     темплейте
 [@] Счетчик посещений теперь можно отключить из настроек сервера
-[@] Черный Рынок/Торговец ресурсами: Переработан  внутренний  алгоритм  работы.
+[@] Чёрный Рынок/Торговец ресурсами: Переработан  внутренний  алгоритм  работы.
     Модуль теперь использует коды событий 9xx
 [@] Унифицированы алгоритмы и  файлы  постройки  флота  и  защиты.  Это  должно
     полностью снять  проблемы  с  отрицательными  ресурсами  после  верфи  и  с
@@ -1444,10 +1448,10 @@ Project "SuperNova.WS" Release 24.2 (2011-01-15 20:08)
 [%] Исправлена ошибка неначисления опыта при постройке зданий
 
 2011-01-13 09:36
-[~] Черный  рынок/Тоговец  ресурсами:   Добавлена  обработка  попытки  обменять
+[~] Чёрный  рынок/Тоговец  ресурсами:   Добавлена  обработка  попытки  обменять
     нулевое количество ресурсов. Раньше просто списывались ТМ, теперь  выдается
     сообщение об ошибке
-[%] Черный рынок/Тоговец ресурсами: Исправлена уязвимость, позволявшая  указать
+[%] Чёрный Рынок/Тоговец ресурсами: Исправлена уязвимость, позволявшая  указать
     отрицательное количество ТМ и получить прибавление ТМ у  пользователя.  Код
     атаки 305 в таблице logs
 
@@ -2175,8 +2179,8 @@ Project "SuperNova.WS" Release 24.1 (2011-01-11 22:17)
     о ней обновилась
 
 2010-10-03 22:08
-[+] Черный рынок: добавились слайдеры на страницы продажи и покупки кораблей
-[~] "Биржа ресурсов" из левого меню переехала в "Черный рынок"
+[+] Чёрный Рынок: добавились слайдеры на страницы продажи и покупки кораблей
+[~] "Биржа ресурсов" из левого меню переехала в "Чёрный Рынок"
 [~] Переработана структура левого меню
 
 2010-10-01 23:16
@@ -2525,7 +2529,7 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
 [%] Исправлена ошибка отправки сообщений новому игроку с одной планетой.
 [%] Исправлены некорректные ссылки на страницу  офицеров  при  получении  новых
     ТМ.
-[%] Исправлена ошибка Черного Рынка с продавцом Б/У кораблей.
+[%] Исправлена ошибка Чёрного Рынка с продавцом Б/У кораблей.
 
 2010-07-12 13:20
 [!] Обзор планеты: Для таймеров используется написанная с нуля JS-библиотека.
@@ -2546,7 +2550,7 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
     истечении которого чат отключается.
 
 2010-06-29 20:00
-[!] Полностью с нуля написан "Черный  Рынок".  Код  вылизан,  интерфейс  сделан
+[!] Полностью с нуля написан "Чёрный  Рынок".  Код  вылизан,  интерфейс  сделан
     максимально удобным (по моим  понятиям).  В  Торговце  ресурсами  добавлена
     возможность обмена ТМ на ресурсы (обратный обмен  -  невозможен).  Торговец
     флотом полностью переработан и позволяет теперь в одну транзакцию продавать
@@ -2614,7 +2618,7 @@ Project "SuperNova.WS" Initial Revision
 [!] Админка/Статистика:  Полностью  переписан  модуль  обновления  статистики.
 [!] Темплейты:   Добавлен  движок  рендеринга  темплейтов  от  phpBB3.   Движок
     доработан до обратной совместимости с темплейтами XNova 
-[!] Черный рынок: Полностью переписан Черный Рынок
+[!] Чёрный Рынок: Полностью переписан Чёрный Рынок
 [!] Баннеры: Переработана система генерации  баннеров/юзербаров.  Унифицированы
     процедуры их генерации, слиты в один файл  процедур  и  один  файл-враппер,
     вынесены PHP-файлы из каталога scripts в соответствующие места
