feat-MRK-33a23: Black Market - added infotrader. Infotrader can sell various infopacket. Now it sells info about Mercenaries on selected user

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,8 +8,8 @@
 [%] Исправление - багфикс
 [@] Эта информация будет интересна только админам и/или разработчикам
 
-Текущая версия 33a22.2
-~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a23
+~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите PHP, сделайте откат  до  более  ранней
@@ -166,11 +166,14 @@
        лаборатория  с  максимальным  эффективным   уровнем   (т.е.   с   учетом
        нанолабораторий)
     3. При отмене исследования ресурсы возвращаются на ту  планету,  с  которой
-    были взяты
+       были взяты
     4. Награда за квесты на исследование теперь всегда начисляется на  основную
-    планету игрока
+       планету игрока
     5. При апдейте все идущие исследования будут перенесены в  пользовательскую
-    очередь
+       очередь
+[!] Чёрный Рынок: Продавец информации
+    На Черном Рынке доступна новая услуга: продажа информации.
+    Информация об игроке: текущие уровни активных Наемников.
 
 [+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
     игрока на странице "Вселенная"
