doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -172,7 +172,7 @@
     5. При апдейте все идущие исследования будут перенесены в  пользовательскую
        очередь
 [!] Чёрный Рынок: Продавец информации
-    На Черном Рынке доступна новая услуга: продажа информации.
+    На Чёрном Рынке доступна новая услуга: продажа информации.
     Информация об игроке: текущие уровни активных Наемников.
 
 [+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
@@ -246,6 +246,8 @@
 [%] Админка: Исправлена ошибка создания квеста
 [%] Ракетная атака: Исправлена ошибка, из-за которой ракеты били в  десять  раз
     слабее
+[%] UBE: Исправлена ошибка неучета бонуса  Альянсов  в  бою.  ВНИМАНИЕ!  Бонусы
+    Альянса и от Наемников по-прежнему не будут видны в логе боя!
 
 [@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
