misc-MRK-33a23.1: Messages from Infotrader always arrive to mailbox - even if player has switched off receiving of spy reports

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -172,7 +172,9 @@
     5. При апдейте все идущие исследования будут перенесены в  пользовательскую
        очередь
 [!] Чёрный Рынок: Продавец информации
-    На Чёрном Рынке доступна новая услуга: продажа информации.
+    На Чёрном Рынке  доступна  новая  услуга:  продажа  информации.  Письма  от
+    Продавца Информации всегда приходят в почтовый ящик -  даже  если  у игрока
+    отключено получение шпионских отчетов. Мистика какая-то!
     Информация об игроке: текущие уровни активных Наемников.
 
 [+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
