--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,7 +8,7 @@
 [%] Исправление - багфикс
 [@] Эта информация будет интересна только админам и/или разработчикам
 
-Текущая версия 33a23
+Текущая версия 33a24
 ~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
@@ -176,6 +176,23 @@
     Продавца Информации всегда приходят в почтовый ящик -  даже  если  у игрока
     отключено получение шпионских отчетов. Мистика какая-то!
     Информация об игроке: текущие уровни активных Наемников.
+[!] Темплейты: Минификатор
+    ВНИМАНИЕ! ЭТО - ЭКСПЕРИМЕНТАЛЬНАЯ ФИШКА! ИСПОЛЬЗУЙТЕ ЕЁ  НА  СВОЙ  СТРАХ  И
+    РИСК!
+    Минификатор уменьшает размер генерируемого движком HTML-кода  путем  замены
+    нескольких  идущих  подряд  пустых  символов  (перевод  строки,  табуляция,
+    пробел) одним символом пробела.
+    Минификатор умеет сжимать HTML и встроенный JS-код. Для JS-кода он  так  же
+    удаляет однострочные комментарии.
+    Минификатор работает на уровне темплейтов и если включено  кэширование,  то
+    минификатор вызывается  только  один  раз  при  компиляции  кода  и  дальше
+    кэшируется   уменьшенный   скомпилированный   темплейт,    что    исключает
+    необходимость в повторном вызове минификатора. Этим он  выгодно  отличается
+    от  минификаторов, работающих на уровне сессии через ob_hanler() 
+    В  среднем  по  сайту  минификатор   дает   выигрыш   порядка   7-8%%   при
+    незначительном падении производительности.
+    По  умолчанию  минификатор  отключен.  Включить  его  можно  в  админке   в
+    настройках сервера - пункт "Минификатор темплейтов"
 
 [+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
     игрока на странице "Вселенная"
