feat-SYS: New favicon.ico! Megarespect to Ivash!

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -78,6 +78,7 @@
     7. То же самое распространяется и на Наемников. При этом только Альянс дает
        возможность получить эффективный уровень Наемников больше максимального
 
+[!] Иконка сайта: Новая иконка сайта! Мегареспект ув.Помощнику Ivash!
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
     поддержка постоянных Наемников (ПН). Тип Наемников выбирается в  настройках
     сервера
