--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-We Want YOU!
+We Want YOU!1234
 ~~~~~~~~~~~~
 SuperNova need YOU! We need maintainers  for  localizations.  Any  language  is
 fine! Currently we need maintainer for English locale to check and  fix  it  as
