misc-STA-33a24.3: Sex on statistic page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,7 +8,7 @@
 [%] Исправление - багфикс
 [@] Эта информация будет интересна только админам и/или разработчикам
 
-Текущая версия 33a24.2
+Текущая версия 33a24.3
 ~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
@@ -217,6 +217,7 @@
 [+] Исследования: Добавлены подробные  сообщения  об  ошибке  в  случае,  когда
     технология не может быть исследована (нехватка ресурсов,  неудовлетворенные
     требования итд)
+[+] Статистика: Показывается пол игрока
 [+] Документация: Добавлен файл /docs/html/changelog.html - чейнджлог в html
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
