feat-ADM-33a25: Manual version check. Only safe infromation being sent

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,12 +8,12 @@
 [%] Исправление - багфикс
 [@] Эта информация будет интересна только админам и/или разработчикам
 
-Текущая версия 33a24.3
-~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a25 "Temporary Mercenary Aliplayers Avatar Rename"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
-    работу СН начиная с v33a12! Обновите PHP, сделайте откат  до  более  ранней
-    версии PHP или используйте предыдущую версию СН.
+    работу СН начиная с v33a12! Обновите  PHP,  или  сделайте  откат  до  более
+    ранней версии PHP, или используйте предыдущую версию СН.
     Описание бага: https://bugs.php.net/bug.php?id=50394
 [@] Среда разработки изменена на WAMP Server 2.2. Конфигурация:
     MySQL 5.1.41
@@ -77,7 +77,6 @@
        игроку отдельно
     7. То же самое распространяется и на Наемников. При этом только Альянс дает
        возможность получить эффективный уровень Наемников больше максимального
-
 [!] Иконка сайта: Новая иконка сайта! Мегареспект ув.Помощнику Ivash!
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
     поддержка постоянных Наемников (ПН). Тип Наемников выбирается в  настройках
@@ -122,6 +121,8 @@
     3. В режиме ПН видны все наемники - даже  недоступные  (с  соответствующими
     пояснениями)
     4. В режиме ПН можно нанимать сразу несколько уровней Наемников
+    5. При найме постоянных наемников показывается ровно  столько  уровней,  на
+    сколько хватает ТМ
 [!] Аватары: Добавлена поддержка серверных аватаров игроков
     Аватары могут быть  загружены  с  локального  диска  на  странице  настроек
     пользователя.
@@ -157,6 +158,8 @@
     ТМ. Таким образом более высокая цена именования  галактики  или  системы  в
     определенной степени защищает объект от переименования
     7. Как было сказано в п.2, имя галактики и системы видны всем игрокам
+    8. Все действия по переименованию галактик и систем записываются  в  лог  -
+    код события 104
 [!] Модульность: Базовая  поддержка  модульности  -  динамически  перекрываемые
     функции. Подробное описание по использованию динамического перекытия см.  в
     разделе "Модульная система" файла /docs/readme.txt
@@ -173,9 +176,9 @@
     5. При апдейте все идущие исследования будут перенесены в  пользовательскую
        очередь
 [!] Чёрный Рынок: Продавец информации
-    На Чёрном Рынке  доступна  новая  услуга:  продажа  информации.  Письма  от
-    Продавца Информации всегда приходят в почтовый ящик -  даже  если  у игрока
-    отключено получение шпионских отчетов. Мистика какая-то!
+    На Чёрном Рынке  доступна  новая  услуга:  продажа  информации.
+    Письма от Продавца Информации всегда приходят в почтовый ящик - даже если у
+    игрока отключено получение шпионских отчетов. Мистика какая-то!
     Информация об игроке: текущие уровни активных Наемников.
 [!] Темплейты: Минификатор
     ВНИМАНИЕ! ЭТО - ЭКСПЕРИМЕНТАЛЬНАЯ ФИШКА! ИСПОЛЬЗУЙТЕ ЕЁ  НА  СВОЙ  СТРАХ  И
@@ -195,8 +198,8 @@
     По  умолчанию  минификатор  отключен.  Включить  его  можно  в  админке   в
     настройках сервера - пункт "Минификатор темплейтов"
 
-[+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
-    игрока на странице "Вселенная"
+[+] Пол: Добавлено отображение пола игрока на странице "Император", на странице
+    статистики и в попапе игрока на странице "Вселенная"
 [+] Настройки: Отображение логотипов Альянсов и аватаров  игроков  на  странице
     "Вселенная" может быть отключено в настройках игроков
 [+] Вселенная: На попапе игрока отображается его текущее звание в Альянсе
@@ -217,7 +220,6 @@
 [+] Исследования: Добавлены подробные  сообщения  об  ошибке  в  случае,  когда
     технология не может быть исследована (нехватка ресурсов,  неудовлетворенные
     требования итд)
-[+] Статистика: Показывается пол игрока
 [+] Документация: Добавлен файл /docs/html/changelog.html - чейнджлог в html
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
@@ -241,15 +243,9 @@
 [~] Альянсы: Теперь список членов Альянса распознает права просматривающего без
     захода в админскую  часть,  поэтому  из  админки  убран  пункт  "Управление
     участниками"
-[~] Наемники:   При  найме  постоянных  наемников  показывается  ровно  столько
-    уровней, на сколько хватает ТМ
 [~] Альянсы: Изменено отображение логотипа на странице Альянса
-[~] Исследования: Награда за квесты на исследование теперь  всегда  начисляется
-    на основную планету игрока
 [~] Список планет: Клик на иконке  летящего  союзного  флота  теперь  открывает
     сраницу "Флоты в полете"
-[~] Вселенная:   Все  действия  по  переименованию  галактик  и  систем  теперь
-    записываются в лог - код события 104
 [~] Чёрный Рынок
     Редизайн основного экрана и экрана обмена ресурсов
     Откуда взялась эта странная надпись? Очень странно...
@@ -269,8 +265,22 @@
     слабее
 [%] UBE: Исправлена ошибка неучета бонуса  Альянсов  в  бою.  ВНИМАНИЕ!  Бонусы
     Альянса и от Наемников по-прежнему не будут видны в логе боя!
+[%] Альянсы: Исправлена ошибка выхода из Альянса - у игрока  не  затирался  тэг
+    Альянса
 
-[@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
+[@] Админка: Проверка версии
+    Проверка версии выполняется исключительно в ручном режиме по нажатию кнопки
+    "Проверить версию". При этом передаются только анонимные данные  -  текущая
+    версия БД, номер релиза и версия игры
+    При проверке движок обращается через HTTP на сервер  проверки  версий.  При
+    установленом CURL он будет использован.  Если  CURL  не  установлен,  будет
+    осущствлена попытка  получить  версию  через  file_get_contents().  Поэтому
+    убедитесь, что если  CURL  установлен  -  он  правильно  сконфигурирован  и
+    подключен к PHP, а если CURL не установлен - в PHP разрешается обращаться к
+    внешним сайтам через соответствующую функцию
+    Результат проверки - рекомендация движка о необходимости обновления текущей
+    версии игры
+[@] Админка: Редизайн интерфейса просмотра логов (бывш. "Ошибки")
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
     корректно настроен временный каталог и движку должна быть разрешена  запись
     в каталог /images/avatar
@@ -279,7 +289,14 @@
 [@] Пол: В скины добавлена иконка пола в подкаталог "images" скина.  Файлы  для
     мужского  и  женского  пола  называются  соответственно  "sex_male.png"   и
     "sex_female.png". Встроенные скины обновлены автоматически
+[@] Новости: Изменения в редактировании новости
+    При редактировании новости галочка рассылки новости по умолчанию отключена
+    При  редактировании  новости  не  изменяется  глобальное  время   написания
+    последней новости -  т.е.  отредактированная  новость  не  включает  список
+    последних новостей на обзоре планеты
 [@] JS: Обновлен jQuery до версии 1.7.1. Обновлен jQuery-UI до версии 1.8.17
+[@] БД: Доработан дамп. Теперь по умолчанию новосоздаваемый игрок имеет мужской
+    пол - так же, как и дефолтный администраторский аккаунт
 [@] Строительство: Файлы с функциями строительства  зданий/исследований/обороны
     перенесены в каталог /includes/includes и теперь  подключаются  только  при
     вызове соответствующих страниц. Это  позволило  заметно  сократить  размеры
@@ -292,13 +309,8 @@
     избежать  злоупотреблений  связанных  с  частым  обновлением  страницы   на
     медленных соединениях
 [@] Файл todo.txt заменен на todo.xls
-[@] Новости: Изменения в редактировании новости
-    При редактировании новости галочка рассылки новости по умолчанию отключена
-    При  редактировании  новости  не  изменяется  глобальное  время   написания
-    последней новости -  т.е.  отредактированная  новость  не  включает  список
-    последних новостей на обзоре планеты
+[@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
 [@] Файлы: Удалены неиспользуемые файлы faq.php, faq1.php, faq2.php
-[@] Админка: Редизайн интерфейса просмотра логов (бывш. "Ошибки")
 [@] Чёрный Рынок: Почищены языковые файы от неиспользуемых строк
 
 
