--- a/docs/install.txt
+++ b/docs/install.txt
@@ -44,9 +44,9 @@ XCache >= 1.2.х - опционально, но крайне, крайне желательно.  Без  XCache  не
                   на MySQL.
 
 ВНИМАНИЕ!!! PHP 5.3.1 содержит  баг,  который  делает  невозможной  полноценную
-работу СН начиная с v33a12! Обновите PHP, сделайте откат до более ранней версии
-PHP или используйте предыдущую версию СН.
-Ссылка для чтения: https://bugs.php.net/bug.php?id=50394
+работу СН начиная с v33a12! Обновите PHP, или сделайте откат  до  более  ранней
+версии PHP, или используйте предыдущую версию СН.
+Описание бага: https://bugs.php.net/bug.php?id=50394
 
 Движок разрабатывается под Windows на WAMP Server 2.2. Конфигурация:
   MySQL 5.1.41
