feat-INT-33a27: Column count of planet list on overview page now can be set up by user

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -226,6 +226,24 @@
 [+] Исследования: Добавлены подробные  сообщения  об  ошибке  в  случае,  когда
     технология не может быть исследована (нехватка ресурсов,  неудовлетворенные
     требования итд)
+[+] Обзор планеты: Настраиваемое количество колонок в списке планет
+    На странице настроке пользователя можно  указать,  сколько  колонок  должно
+    быть в списке планет - пункт "Количество колонок в списке планет" в разделе
+    "Настройки интерфейса"
+    Можно выставить количество колонок в 0 и  указать  максимальное  количество
+    рядов с списке - см. соответствующий пункт там же.  В  этом  случае  движок
+    рассчитает количество колонок исходя из этого  числа.
+    Обращаю внимание - указывается именно максимальное количество  рядов!  Т.е.
+    если у игрока 6  планет,  а  количество  рядов  указано  5,  то  количество
+    необходимых колонок для того, что бы число рядов не привысило 5 будет равно
+    двум. Соответственно, список планет будет сформирован в виде  двух  колонок
+    по три ряда. Если же колоний будет 12 - список планет будет  выглядеть  как
+    таблица три колонки по четыре ряда.
+    Данная особенность связана с построением списка планет -  слева  направо  и
+    сверху вниз. Естественно, не составило  бы  никакого  труда  сделать  вывод
+    списка сверху вниз, а затем справо налево - это было бы даже легче.  Однако
+    при выбранном способе  сохраняется  пользовательская  сортировка  планет  -
+    более "важные" колонии всегда будут "выше" в списке
 [+] Документация: Добавлен файл /docs/html/changelog.html - чейнджлог в html
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
