feat-ADM-33a28: Automatic version check. Still anony mouse

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,15 +1,16 @@
 
 Обозначения
 ~~~~~~~~~~~
-[#] Модуль, не входящий в публичную версию
-[!] Нововведения
-[+] Добавлено
-[~] Изменено
-[%] Исправление - багфикс
-[@] Эта информация будет интересна только админам и/или разработчикам
+[#] Модуль, не входящий в публичную версию/Private module
+[!] Нововведения/New features
+[+] Добавлено/New functions
+[~] Изменено/Changed functions
+[%] Исправление - багфикс/Bugfixes
+[@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
+    information is only for administrators and/or developers 
 
-Текущая версия 33a26 "Temporary Mercenary Aliplayers Avatar Rename"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a28 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите  PHP,  или  сделайте  откат  до  более
@@ -83,7 +84,38 @@
        игроку отдельно
     7. То же самое распространяется и на Наемников. При этом только Альянс дает
        возможность получить эффективный уровень Наемников больше максимального
+
 [!] Иконка сайта: Новая иконка сайта! Мегареспект ув.Помощнику Ivash!
+[!] Админка: Проверка версии
+    На страницу настроек сервера добавлена возможность проверки текущей  версии
+    движка на предмет необходимости  обновления.
+    1. При проверке версии передаются только анонимные данные - текущая  версия
+       БД, номер релиза и версия игры.
+    2. При проверке движок обращается через HTTP на сервер проверки версий.
+    3. Если установлен CURL и подключен к PHP, то  для  проверки  версии  будет
+       использован именно он. Убедитесь, что  CURL  правильно  настроен  и  ему
+       разрешен доступ к внешним ресурсам
+    4. Если CURL не установлен, будет осущствлена попытка получить версию через
+       file_get_contents(). Убедитесь,  что  в  PHP  разрешается  обращаться  к
+       внешним сайтам через соответствующую функцию
+    5. Результат проверки - рекомендация  сервера  обновлений  о  необходимости
+       обновления текущей версии игры
+    6. Есть два варианта проверки версии: ручная и автоматическая
+    7. Ручная проверка версии выполняется в ручном  режиме  по  нажатию  кнопки
+       "Проверить версию" на странице настроек.
+    8. Автоматическая проверка версии (по умолчанию -  отключена)  производится
+       самостоятельно движком по расписанию. Как и при ручной,  передается  тот
+       же объем анонимных данных
+    9. Период автоматической проверки версии  задается  в  секундах  в  таблице
+       config  переменной  server_updater_check_period.  По  умолчанию   период
+       проверки равен 24 часам (раз в сутки).
+    10. Результат и время последней проверки выводится в левом меню.
+    11. Результат и время последней  проверки  так  же  выводится  на  странице
+        настроек.
+    12. Предусмотрено цветовое кодирование результатов проверки  (как  в  левом
+        меню, так и в настройках): зеленый - обновление необязательно, желтый -
+        желательно  обновить   движок,   оранжевый   -   крайне   рекомендуется
+        обновление, красный - ошибка проверки версии 
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
     поддержка постоянных Наемников (ПН). Тип Наемников выбирается в  настройках
     сервера
@@ -292,18 +324,6 @@
 [%] Альянсы: Исправлена ошибка выхода из Альянса - у игрока  не  затирался  тэг
     Альянса
 
-[@] Админка: Проверка версии
-    Проверка версии выполняется исключительно в ручном режиме по нажатию кнопки
-    "Проверить версию". При этом передаются только анонимные данные  -  текущая
-    версия БД, номер релиза и версия игры
-    При проверке движок обращается через HTTP на сервер  проверки  версий.  При
-    установленом CURL он будет использован.  Если  CURL  не  установлен,  будет
-    осущствлена попытка  получить  версию  через  file_get_contents().  Поэтому
-    убедитесь, что если  CURL  установлен  -  он  правильно  сконфигурирован  и
-    подключен к PHP, а если CURL не установлен - в PHP разрешается обращаться к
-    внешним сайтам через соответствующую функцию
-    Результат проверки - рекомендация движка о необходимости обновления текущей
-    версии игры
 [@] Админка: Редизайн интерфейса просмотра логов (бывш. "Ошибки")
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
     корректно настроен временный каталог и движку должна быть разрешена  запись
