misc-INT-33a28.1: Reworked main menu

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33a28 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a28.1 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите  PHP,  или  сделайте  откат  до  более
@@ -305,6 +305,7 @@
 [~] Чёрный Рынок
     Редизайн основного экрана и экрана обмена ресурсов
     Откуда взялась эта странная надпись? Очень странно...
+[~] Меню: Переработано меню
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
