doc: install.txt editing

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -159,6 +159,8 @@ innodb_file_per_table
 администрирования нужно использовать РАЗНЫЕ аккаунты! По той же  самой  причине
 члены команды не участвуют  в  построении  таблицы  рекордов  (но  участвуют  в
 статистике)
+Если после выполнения этих действий возникли проблемы - см.ниже возможные  пути
+их разрешения в разделе "Если возникли проблемы..."
 
 
 Инсталляция, продвинутый вариант
@@ -221,6 +223,8 @@ xCache
 7. И,  наконец,  после  всех  этих  действий   игру   можно   опять   включить
    (Администратор -> Настройки, снять  галочку  "Отключить  игру"  и  сохранить
    изменения).
+Если после выполнения этих действий возникли проблемы - см.ниже возможные  пути
+их разрешения в разделе "Если возникли проблемы..."
 
 Апгрейд с RR
 ------------
@@ -241,25 +245,22 @@ url.rewrite-once = (
   "^/scripts/createbanner.php(.*)" => "/banner.php$1"
 )
 
-Если возникли проблемы с обновлением...
----------------------------------------
-Невозможно предсказать заранее все возможные комбинации настроек PHP,  MySQL  и
-веб-сервера. СН ориентируется на "установки по умолчанию". Поэтому в  отдельных
-случаях  возможны  сбои  в  процедуре  обновления.   Алгоритм   автоматического
-обновления  рассчитан  на  однократный  запуск.  Однако  в   случае   некоторых
-конфигураций, в процессе обновления  происходят  ошибки.  Некоторые  из  них  -
-критичны, а некоторые можно исправить повторным запуском процедуры (с  или  без
-редактирования БД). Запустить процедуру  обновления  повторно  можно  используя
-пункт "Форсировать обновление" меню "Утилиты" на странице Администратора. Прошу
-обратить внимание! Использование форсированного  обновления  может  привести  к
-порче  БД  (в  случае,  если  само  обновление  закончилось   ранее   успешно)!
-Форсированное  обновление  нужно  использовать  только  в  том   случае,   если
-стандартная процедура обновления прошла неуспешно! Если  и  это  не  помогло  -
-следует перейти к Диагностиек неисправностей
 
+Если возникли проблемы с обновлением или инсталляцией
+=====================================================
+
+Проверьте версию PHP
+--------------------
+ВНИМАНИЕ! PHP версии 5.3.1 содержит баг, который препятствует корректной работе
+функции-оболочки, если в параметрах оригинальной функции  содержится  параметр,
+передаваемый по ссылке. Поэтому начиная с 33a12 СверхНовая  не  может  работать
+под PHP этой версии! Обновите PHP на более поздний, или сделайте откат до более
+ранней версии, или используйте предыдущюю версию СН!
+
+Ссылка для чтения: https://bugs.php.net/bug.php?id=50394
 
 "Белый экран"
-=============
+-------------
 Очень часты жалобы следующего вида: "Я скачал и поставил движок, а при загрузке
 страницы в браузере только белый экран!". Данная  неисправность  в  большинстве
 случаев означает, что есть какая-то проблема,  но  в  настройках  PHP  отключен
@@ -268,6 +269,110 @@ url.rewrite-once = (
 бы включить вывод ошибок в движке,  нужно  в  файле  /includes/init.php  второй
 строкой вписать:
   define('BE_DEBUG', true);
+
+Если используете Альфа-версии релизов...
+----------------------------------------
+...то перед сообщением об ошибке нужно:
+1. Почитать новости
+2. Обновится до последней существующей  версии  -  возможно,  в  ней  глюк  уже
+исправлен,  потому  что  я  публикую  чейнджлог  пачками  и  могу   просто   не
+опубликовать еще изменения
+
+Fatal error: Cannot redeclare...
+--------------------------------
+Файлы движка и функции в нем могут менять местоположение от  версии  к  версии.
+Поскольку движок  в  состоянии  Альфа  -  это  нормально.  Движок  расчитан  на
+обновление   через   репозитории   GIT/SVN,   при   которых   все   перемещения
+файлов/функций отрабатываются автоматически.  Однако  при  простом  копировании
+старой версии движка поверх новой может возникнуть следующая ошибка: 
+  Fatal error: Cannot redeclare (...) in (...) on line (...)
+Вместо (...) - названия функций, файлов, номер строки
+
+В этом случае необходимо ПОЛНОСТЬЮ удалить старую версию движка (сохранив  файл
+config.php), залить новую версию движка и подсунуть её конфигурационный файл.
+
+Те, кто разбирается немного в PHP (а таким должен быть  любой,  кто  пользуется
+текущими версиями движка) может просто удалить лишние файлы,  определив  их  по
+сообщению об ошибке.
+
+Ошибки с CONTRAINTs
+-------------------
+После включения отладочного режима движок может выдать уведомление об ошибках в
+CONTRAINTs. Обычно это происходит при  интенсивном  использовании  альфа-версий
+релизов  при  апгрейде  с  пропуском  нескольких  версий.  Иногда  такое  может
+произойти и при апгрейде альфа/бета версии  на  релиз.  Ниже  приводится  общий
+алгоритм решения такого типа проблем - если не вмочь ждать следующей альфы  или
+обновления релиза
+
+Приведу алгоритм решение проблемы с констраинтами на примере  таблицы  users  и
+поля ally_tag
+
+Нам нужно добавить вот такой constraint:
+Код: Выделить всё
+ADD CONSTRAINT `FK_users_ally_tag` FOREIGN KEY (`ally_tag`) REFERENCES `{$config->db_prefix}alliance` (`ally_tag`) ON DELETE SET NULL ON UPDATE CASCADE
+
+Он связывает поле ally_tag таблицы users (подчиненная) с полем ally_tag таблицы
+alliance (главная). Когда поле  ally_tag  изменяется  в  таблице  alliance,  то
+связанное поле автоматически изменяется в таблице users. Если запись  удаляется
+из таблицы users - поле ally_tag d соответствующей записи удаляется из  таблицы
+users.
+
+Что бы можно было сделать  такую  связь,  нужна  логическая  целостность  обоих
+таблиц. Это означает, что:
+1. Типы и кодировка связываемых полей должны совпадать.
+2. В подчиненной таблице в свойствах поля должно стоять DEFAULT NULL
+3. Для всех связываемых полей должны существовать индексы во всех  используемых
+   таблицах
+4. На момент связывания в подчиненной таблице НЕ ДОЛЖНО быть таких  значений  в
+связываемом поле, которых нет в главной таблице.
+
+В нашем случае (самый сложный) нужно: во-первых обновить все значения  ally_tag
+до текущих:
+doquery("UPDATE {{users}} AS u LEFT JOIN {{alliance}} AS a ON a.id = u.ally_id SET u.ally_tag = a.ally_tag;");
+
+во-вторых - для тех записей, для  которых  Альянсы  не  существуют,  установить
+соответствующее поле в NULL
+doquery("UPDATE {{users}} AS u LEFT JOIN {{alliance}} AS a ON a.id = u.ally_id SET u.ally_id = NULL, u.ally_tag = NULL WHERE a.id is NULL;");
+
+Если бы в constraint стояло бы ON DELETE CASCADE, а не ON DELETE SET  NULL,  то
+нужно было бы просто удалить из подчиненной таблицы все записи, для которых нет
+соответствия в главной таблице. На примере constraint для таблицы shortcut:
+ADD CONSTRAINT `FK_shortcut_planet_id` FOREIGN KEY (`shortcut_planet_id`) REFERENCES `{$config->db_prefix}planets` (`id`) ON DELETE CASCADE ON UPDATE CASCADE
+
+соответствующий запрос:
+doquery('DELETE FROM {{shortcut}} WHERE shortcut_planet_id NOT IN (SELECT id FROM {{planets}});');
+
+??????
+PROFIT!
+
+Собственно, апдейтер сам делает все нужные изменения. НО ТОЛЬКО если ранее  все
+апдейты  проходили  нормально!  Если,  например,  ранее  сбился  constraint  на
+ally_id, то апдейтер НЕ СМОЖЕТ нормально отработать constraint на ally_tag.
+
+Мануал для курения:
+http://dev.mysql.com/doc/refman/5.5/en/ ... aints.html
+
+И совсем продвинутый мануал:
+http://dev.mysql.com/doc/refman/5.5/en/constraints.html
+
+Если используете релиз
+----------------------
+Невозможно предсказать заранее все возможные комбинации настроек PHP,  MySQL  и
+веб-сервера. СН ориентируется на "установки по умолчанию". Поэтому в  отдельных
+случаях  возможны  сбои  в  процедуре  обновления.
+Алгоритм автоматического обновления рассчитан на однократный запуск.  Однако  в
+случае  некоторых  конфигураций,  в  процессе  обновления  происходят   ошибки.
+Некоторые из них - критичны, а некоторые  можно  исправить  повторным  запуском
+процедуры (с или без редактирования БД).
+Запустить процедуру обновления  повторно  можно  используя  пункт  "Форсировать
+обновление" меню "Утилиты" на странице Администратора.
+Прошу обратить внимание! Использование форсированного обновления может привести
+к порче  БД  (в  случае,  если  само  обновление  закончилось  ранее  успешно)!
+Поэтому ОБЯЗАТЕЛЬНО сделайте копию движка и БД перед форсированным  обновлением
+(даже  если вы делали копию перед апгрейдом)!
+Форсированное  обновление  нужно  использовать  только  в  том   случае,   если
+стандартная процедура обновления прошла неуспешно! Если  и  это  не  помогло  -
+следует перейти к разделу "Диагностика неисправностей движка"
 
 
 Диагностика неисправностей движка
@@ -288,13 +393,14 @@ https://github.com/supernova-ws/SuperNova/archives/trunk
    1. Наиболее вероятно - ошибки в настройке сервера MySQL
    2. Ошибки в дампе  БД.  Возможно,  вы  попали  в  момент  обновления  дампа.
       "Момент" тут понятие условное - он может растянутся на несколько дней
-2. Поставить на чистый сервер и чистую БД, полученную на прошлом  шагу,  движок
-   из архива. Попытаться запустить. Проблемы на этом этапе говорят о следующем:
-   1. Ошибки в настройках движка. Проверить файл /config.php
-   2. Ошибки в настройках HTTP-сервера (особенно если  первый  раз  запускается
-   движок)
-   3 Ошибки в автоапдейтере
-   4. Движок находится в процессе написания, а вы попали на "момент" коммита
+2. Поставить на чистый сервер и чистую БД, полученную на прошлом  шаге,  движок
+      из архива.  Попытаться  запустить.  Проблемы  на  этом  этапе  говорят  о
+      следующем:
+      1. Ошибки в настройках движка. Проверить файл /config.php
+      2. Ошибки в настройках HTTP-сервера  (особенно  если  движок  запускается
+         первый раз) 
+      3. Ошибки в автоапдейтере
+      4. Движок находится в процессе написания, а вы попали на "момент" коммита
 3. Заменить чистую базу дампом своей рабочей базы (не забываем СНОВА если нужно
    изменить конфигурацию  –  префиксы  таблиц  там,  логины/пароли  и  прочее).
    Проблемы на этом этапе говорят о следующем:
@@ -341,7 +447,9 @@ https://github.com/supernova-ws/SuperNova/archives/trunk
   WMU (WM-UAH) U726314912308
 
 Если вы пользуетесь ВебМанями для покупки различных электронных товаров, то  вы
-можете а) купить привычный электронный товар по хорошей цене б) помочь проекту.
+можете одновременно
+а) купить привычный электронный товар по хорошей цене
+б) помочь проекту.
 http://gorlum.plati.ru - пополнения сотовых, Skype, WoW - игра и  ТК  и  прочие
 электрические товары за WM. Каждая покупка, сделанная с этого  линка,  принесет
 мне небольшие комиссионные.
