misc-INT-33a29.1: Planet navbar made horizontal

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33a29 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a29.1 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите  PHP,  или  сделайте  откат  до  более
@@ -299,6 +299,8 @@
     На всех экранах строительства (здания, флот, оборона) к  основному  навбару
     прибавляется  дополнительный  с  перечнем  текущих  ресурсов  на  выбранной
     планете
+[~] Флоты: Добавлено количество дейтрия на планете на страницу выбора  кораблей
+    и страницу выбора точки назначения
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
     предотвращает "баян" - прыжки ширины таблицы построек
@@ -383,6 +385,7 @@
     удобства разработки
     Теперь при использовании директивы <!--  INCLUDE  -->  НЕ  НУЖНО  указывать
     расширение подключаемого файла
+[@] Файлы из /includes/fleet и /includes/market перенесены в /includes/includes
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
