--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33a29.1 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+Текущая версия 33a29.2 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
@@ -281,8 +281,11 @@
     Из навбара убрано количество текущих ресурсов на  планете/в  альянсе  -  их
     присутствие на большей части экранов не имело практического смысла при том,
     что отнимало драгоценное вертикальное пространство страницы.
+    Сведения о количестве ресурсов на планете вынесены в планетарный навбар. На
+    странице настроек пользователя можно сделать планетарный навбар  постоянным
+    - т.е. будет полностью восстановлен функционал старого навбара
     Там, где сведения о количестве  ресурсов  на  планете  смысл  имеет  -  они
-    добавлены (см. ниже)
+    добавлены или включен планетарный навбар (см. ниже)
 
 [~] Обзор планеты: Добавлено текущее количество ресурсов  на  планете,  текущий
     размер хранилищ, а так же - количество ресурсов на прилетающих флотах
@@ -292,15 +295,16 @@
     Добавлено количество  текущих  ресурсов  в  таблицу  перечислений  ресурсов
     Альянсу
     Модуль необходимо обновить до версии v6+ для работы с SN v33a29+!
+[~] Экономика/Строительство
+    На всех экранах строительства (здания, флот, оборона)  включен  планетарный
+    навбар
+[~] Флоты
+    Добавлено количество дейтрия на  планете  на  страницу  выбора  кораблей  и
+    страницу выбора точки назначения 
+    Так же на странице выбора кораблей включен планетарный навбар
 [~] Альянсы
     Добавлен заголовок на страницу Альянсов с тэгом Альянса
     Ссылка на управление Альянсом/игроками перенесена в самую верхнюю таблицу
-[~] Экономика/Строительство
-    На всех экранах строительства (здания, флот, оборона) к  основному  навбару
-    прибавляется  дополнительный  с  перечнем  текущих  ресурсов  на  выбранной
-    планете
-[~] Флоты: Добавлено количество дейтрия на планете на страницу выбора  кораблей
-    и страницу выбора точки назначения
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
     предотвращает "баян" - прыжки ширины таблицы построек
