misc-SYS-33a29.3: Added support for unsupported versions in version check

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -299,8 +299,8 @@
     На всех экранах строительства (здания, флот, оборона)  включен  планетарный
     навбар
 [~] Флоты
-    Добавлено количество дейтрия на  планете  на  страницу  выбора  кораблей  и
-    страницу выбора точки назначения 
+    Добавлено количество  дейтрия  на  планете  на  страницу  выбора  кораблей,
+    страницу выбора точки назначения и страницу своза ресурсов
     Так же на странице выбора кораблей включен планетарный навбар
 [~] Альянсы
     Добавлен заголовок на страницу Альянсов с тэгом Альянса
@@ -389,7 +389,8 @@
     удобства разработки
     Теперь при использовании директивы <!--  INCLUDE  -->  НЕ  НУЖНО  указывать
     расширение подключаемого файла
-[@] Файлы из /includes/fleet и /includes/market перенесены в /includes/includes
+[@]   Файлы   из    /includes/fleet    и    /includes/market    перенесены    в
+    /includes/includes
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
